[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
kamadak-exif = "0.6"
mp4 = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
anyhow = "1"
walkdir = "2"
